# agent-MySQL-route-mcp

./: LICENSE  OVERVIEW.md  README.md
docs/: design.md
mysql-router-mcp/: .env.example  README.md  pyproject.toml
mysql-router-mcp-proxy/: README.md  pyproject.toml
mysql-router-mcp-proxy/src/mysql_router_proxy/: __init__.py  proxy.py
mysql-router-mcp-proxy/tests/: e2e.py  fake_backend.py
mysql-router-mcp/src/mysql_router_mcp/: __init__.py  server.py
