[project]
name = "mysql-router-mcp-proxy"
version = "0.1.0"
description = "Lazy-load stdio proxy in front of mysql-router-mcp. Backend is spawned on first tools/call and reaped after idle timeout."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "mcp[cli]>=1.28.0",
]

[project.scripts]
mysql-router-proxy = "mysql_router_proxy.proxy:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mysql_router_proxy"]